@@ -72,7 +72,7 @@ convert_from_ucs(struct iconv_ces *ces, ucs_t in,
 	return 1;
 }
 
-static __inline ucs_t
+static APR_INLINE ucs_t
 msb(const unsigned char *buf)
 {
 	return (buf[0] << 24) | (buf[1] << 16) | (buf[2] << 8) | buf[3];
