@@ -43,7 +43,7 @@ ucs4_names(struct iconv_ces *ces)
 	return names;
 }
 
-static __inline int
+static APR_INLINE int
 ucs4_nbytes(struct iconv_ces *ces)
 {
 	return sizeof(ucs4_t);
